--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     href="https://d3v0px0pttie1i.cloudfront.net/uploads/team/avatar/162788/af868b7d.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parcel Tracker</title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
